--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/consensys/jobs/1942255'>Job Application for DevOps Engineer (Solutions US) at Consensys</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://yiluhub.join.com/jobs/473968-senior-devops-engineer'>Job @ Yilu Travel Services (Berlin): Senior DevOps... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -140,7 +144,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.sentenial.com/careers/devops-engineer-ireland/'>DevOps Engineer, Ireland | Sentenial</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.sentenial.com/careers/devops-engineer-ireland/'>DevOps Engineer, Ireland | Sentenial</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -186,7 +190,7 @@
 <p><span class="badge badge-light">Bethesda, MD</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vettery/jobs/1926205?gh_jid=1926205'>Job Application for Senior DevOps Engineer at Vettery</a></h5> 
+<h5><a href='https://boards.greenhouse.io/vettery/jobs/1926205?gh_jid=1926205'>Job Application for Senior DevOps Engineer at Vettery</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -240,7 +244,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/deloitte/jobs/4495968002'>Job Application for DevOps Platform Engineer | Platform Engineering at Deloitte</a></h5> 
+<h5><a href='https://boards.greenhouse.io/deloitte/jobs/4495968002'>Job Application for DevOps Platform Engineer | Platform Engineering at Deloitte</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -254,7 +258,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://wtw.referrals.selectminds.com/jobs/devops-support-engineer-12030'>DevOps Support Engineer - Willis Towers Watson Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wtw.referrals.selectminds.com/jobs/devops-support-engineer-12030'>DevOps Support Engineer - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -272,7 +276,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://runtastic.recruiterbox.com/jobs/fk03i5k/'>
+<h5><a href='https://runtastic.recruiterbox.com/jobs/fk03i5k/'>
     DevOps Engineer at Runtastic GmbH
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -306,7 +310,7 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698472634-devops-database-engineer'>SmartRecruiters Inc Devops Database Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698472634-devops-database-engineer'>SmartRecruiters Inc Devops Database Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -332,7 +336,7 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">Reykjav?k, Iceland Montreal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Addison/DevOps-Engineer---Continuous-Integration-Continuous-Delivery_19069159'>DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Addison/DevOps-Engineer---Continuous-Integration-Continuous-Delivery_19069159'>DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... The Continuous Integration/Continuous Delivery DevOps Engineer will join an 
 agile service team focused on daily production service delivery and application?...</p>
@@ -363,7 +367,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oqPhbfwr&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nJl9oMwS'>MORI Associates, Inc. Careers - DevOps Systems Administrator - programming/automation - NASA/JPL</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oqPhbfwr&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nJl9oMwS'>MORI Associates, Inc. Careers - DevOps Systems Administrator - programming/automation - NASA/JPL</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -391,7 +395,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/dae/jobs/cloud-devops-engineer-ts-sci-with-polygraph-dTW9PqZ_qr6A-maKjNoogA'>Cloud DevOps Engineer - TS/SCI with Polygraph #0523 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/cloud-devops-engineer-ts-sci-with-polygraph-dTW9PqZ_qr6A-maKjNoogA'>Cloud DevOps Engineer - TS/SCI with Polygraph #0523 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -439,7 +443,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://apply.workable.com/ontruck/j/242EE31552/'>DevOps and Infrastructure Engineer - Ontruck</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/ontruck/j/242EE31552/'>DevOps and Infrastructure Engineer - Ontruck</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Significant past experience in both software engineering and cloud-based ops, 
 such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
@@ -459,10 +463,6 @@ such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698374583-administrateur-cloud-devops-cloud-ubisoft-'>Ubisoft Administrateur Cloud (Devops - Cloud Ubisoft) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698373991-team-lead-infrastructure-operations-cicd-devops-'>Ubisoft Team Lead (Infrastructure/Operations/CICD/DevOps) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Montreal, QCCanada  Montreal Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
