--- a/software.html
+++ b/software.html
@@ -39,6 +39,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/ValtechNorthAmerica/743999698492356-junior-software-developer'>Valtech North America Junior Software Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/alyvant/jobs/4498249002'>Job Application for Software Engineer at Alyvant</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698617351-software-engineer-c-net-angular-web-api'>Technology Navigators Software Engineer - C#/.NET, Angular, Web API | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Houston, Texas United States  Austin</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -55,7 +63,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pexapark.join.com/jobs/473704-software-engineer'>Job @ Pexapark (Z?rich): Software Engineer | JOIN</a></h5> 
+<h5><a href='https://pexapark.join.com/jobs/473704-software-engineer'>Job @ Pexapark (Z?rich): Software Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -79,7 +87,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qteaVfww&k=Job&j=oacpbfwG&__jvst=Employee&__jvsd=sJNvxgwj&__jvsc=Twitter&bid=nZN9qMwC'>SparkPost Careers - Senior Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qteaVfww&k=Job&j=oacpbfwG&__jvst=Employee&__jvsd=sJNvxgwj&__jvsc=Twitter&bid=nZN9qMwC'>SparkPost Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -99,11 +107,11 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oT3YafwO&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nF28pMwv'>Freedom Financial Network Careers - Senior Software Engineer FDR</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oT3YafwO&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nF28pMwv'>Freedom Financial Network Careers - Senior Software Engineer FDR</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698613809-embedded-software-developer-sr-'>Bosch Group Embedded Software Developer Sr. | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698613809-embedded-software-developer-sr-'>Bosch Group Embedded Software Developer Sr. | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -159,7 +167,7 @@
 <p><span class="badge badge-light">Portland, Oregon  Portland, Oregon</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/incontact/job/oG6sbfw9'>NICE inContact Careers - Senior Specialist Software Engineer Java & AWS</a></h5> 
+<h5><a href='https://jobs.jobvite.com/incontact/job/oG6sbfw9'>NICE inContact Careers - Senior Specialist Software Engineer Java & AWS</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -215,7 +223,7 @@
 <p><span class="badge badge-light">Barcelona, Spain  Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://raisin.join.com/jobs/452387-senior-software-engineer-front-end-m-f-d'>Job @ Raisin (Berlin): (Senior) Software Engineer ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://raisin.join.com/jobs/452387-senior-software-engineer-front-end-m-f-d'>Job @ Raisin (Berlin): (Senior) Software Engineer ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -247,7 +255,7 @@
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://lbl.referrals.selectminds.com/jobs/software-engineer-usable-software-systems-and-integrated-data-frameworks-2298'>Software Engineer - Usable Software Systems and Integrated Data FRameworks - LBL Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lbl.referrals.selectminds.com/jobs/software-engineer-usable-software-systems-and-integrated-data-frameworks-2298'>Software Engineer - Usable Software Systems and Integrated Data FRameworks - LBL Careers</a></h5> 
 <p><span class="badge badge-light">United States  Berkeley</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -311,7 +319,7 @@
 <p><span class="badge badge-light">Jordan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HuaweiTechnologiesCanadaCoLtd/743999698592515-senior-software-developer-for-computer-vision'>Huawei Technologies Canada Co., Ltd. Senior Software Developer for Computer Vision | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HuaweiTechnologiesCanadaCoLtd/743999698592515-senior-software-developer-for-computer-vision'>Huawei Technologies Canada Co., Ltd. Senior Software Developer for Computer Vision | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada Burnaby Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -323,7 +331,7 @@
 <p><span class="badge badge-light">Redwood City, CA Redwood City, CA  Redwood City, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999698591102-sr-software-engineer-cloud-native-application-development'>Oteemo, Inc Sr. Software Engineer, Cloud-Native Application Development | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999698591102-sr-software-engineer-cloud-native-application-development'>Oteemo, Inc Sr. Software Engineer, Cloud-Native Application Development | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Mc Lean, VAMc Lean, VAUnited States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -379,7 +387,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://cerebralgroup.applytojob.com/apply/dzEPzYpZhd/Software-Developer'>Software Developer - Cerebral Staffing, LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cerebralgroup.applytojob.com/apply/dzEPzYpZhd/Software-Developer'>Software Developer - Cerebral Staffing, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -433,14 +441,6 @@
 <hr/>
 <h5><a href='https://boards.greenhouse.io/acommerce/jobs/1912812'>Job Application for Software Engineer at aCommerce</a></h5> 
 <p><span class="badge badge-light">Thailand Bangkok</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698570776-senior-software-engineer-backend-coverage-connection-excellence-team-m-f-d-'>Omio Senior Software Engineer - Backend/ Coverage/ Connection Excellence Team (m / f / d) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/storj/jobs/4468724002'>Job Application for Software Engineer, Marketing Technology at Storj</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
