--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/consensys/jobs/1941455'>Job Application for Front End Developer at Consensys</a></h5> 
+<p><span class="badge badge-light">London</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/consensys/jobs/1942274'>Job Application for Front End Developer (Solutions US) at Consensys</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://tlggconsulting.join.com/jobs/472893-senior-frontend-developer'>Job @ TLGG Consulting (Berlin): Senior Frontend De... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -74,7 +82,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://channable.recruitee.com/o/frontend-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://channable.recruitee.com/o/frontend-developer'>
       Front-end Developer - Channable
     </a></h5> 
 <p><span class="badge badge-light">Utrecht</span></p>
@@ -86,7 +94,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698596337-concepteur-developpeur-front-end-h-f-'>CITECH Concepteur / D?veloppeur Front End (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698596337-concepteur-developpeur-front-end-h-f-'>CITECH Concepteur / D?veloppeur Front End (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -98,7 +106,7 @@
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://skatedeluxe.join.com/jobs/453409-frontend-entwickler-w-m-d'>Job @ skatedeluxe Skateshop (Leipzig): Frontend En... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skatedeluxe.join.com/jobs/453409-frontend-entwickler-w-m-d'>Job @ skatedeluxe Skateshop (Leipzig): Frontend En... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -128,11 +136,11 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mindcurv.applytojob.com/apply/L5PvuvCm75/Developer-Front-End'>Developer Front End - mindcurv - Career Page</a></h5> 
+<h5><a href='http://mindcurv.applytojob.com/apply/L5PvuvCm75/Developer-Front-End'>Developer Front End - mindcurv - Career Page</a></h5> 
 <p><span class="badge badge-light">Kerala, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698573523-front-end-developer-aem-'>Veeam Front-End Developer (AEM) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698573523-front-end-developer-aem-'>Veeam Front-End Developer (AEM) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -268,7 +276,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://rbauction.referrals.selectminds.com/jobs/front-end-developer-2854'>Front-End Developer - Ritchie Bros. Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rbauction.referrals.selectminds.com/jobs/front-end-developer-2854'>Front-End Developer - Ritchie Bros. Careers</a></h5> 
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -334,7 +342,7 @@
 <p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/callibrity/jobs/4499922002'>Job Application for Software Developer (Front-End / UI) at Callibrity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/callibrity/jobs/4499922002'>Job Application for Software Developer (Front-End / UI) at Callibrity</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -384,11 +392,11 @@
 <p><span class="badge badge-light">Taipei Taiwan</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.searchtalent.com/recruit/ViewJob.na?digest=76@7P1EjMNep951Zh.itX@aKTRvMdq2Y3cyDBnI5Kb8-&embedsource=Twitter'>Senior Frontend Developer (m/w/d) - React.js</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.searchtalent.com/recruit/ViewJob.na?digest=76@7P1EjMNep951Zh.itX@aKTRvMdq2Y3cyDBnI5Kb8-&embedsource=Twitter'>Senior Frontend Developer (m/w/d) - React.js</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ansarada/f3c19e12-80ef-45da-ac4d-bf8cba68fe55'>Ansarada - Frontend Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ansarada/f3c19e12-80ef-45da-ac4d-bf8cba68fe55'>Ansarada - Frontend Engineer</a></h5> 
 <p><span class="badge badge-light">Ho Chi Minh Sydney</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -422,7 +430,7 @@
 <p><span class="badge badge-light">Columbus, Ohio</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://georgelabs.recruitee.com/o/frontend-developer-fmd-for-corporates-and-markets-tribe'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://georgelabs.recruitee.com/o/frontend-developer-fmd-for-corporates-and-markets-tribe'>
       Frontend Developer (f/m/d) for Corporates and Markets Tribe - George Labs GmbH
     </a></h5> 
 <p><span class="badge badge-light">Vienna</span></p>
@@ -436,7 +444,7 @@
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698465786-senior-front-end-engineer'>lm group Senior Front end Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698465786-senior-front-end-engineer'>lm group Senior Front end Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -450,14 +458,6 @@
 <hr/>
 <h5><a href='https://boards.greenhouse.io/pushpay/jobs/1936055'>Job Application for Experienced Front End JavaScript Engineer at Pushpay</a></h5> 
 <p><span class="badge badge-light">New Zealand</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/daveramsey/job/oIIrbfwM'>Ramsey Solutions Careers - Senior Frontend Developer</a></h5> 
-<p><span class="badge badge-light">Tennessee</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://letsumai.join.com/jobs/467667-react-front-end-developer'>Job @ UMAI (Kuala Lumpur): React Front-End Developer | JOIN</a></h5> 
-<p><span class="badge badge-light">Kuala Lumpur Malaysia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
