--- a/project-manager.html
+++ b/project-manager.html
@@ -40,12 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/beyondmeat/61ecafea-93c6-4233-9b0f-7a00305a79d2'>Beyond Meat - Project Manager</a></h5> 
+<p><span class="badge badge-light">El Segundo, CA</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qodaVfwq&k=Job&j=oi3tbfwJ&__jvst=Employee+Referral&__jvsd=sI5ktgwl&__jvsc=Twitter&bid=nGkcqMwT'>Shift Digital Careers - Program Manager - Lead Management</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/qualys/job/ozZtbfwW'>Qualys Careers - Global Compensation Program Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Foster City California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/nortal/4179ba63-1fb5-47d8-b447-cc43042a4284'>Nortal - eGovernment Project Manager</a></h5> 
@@ -88,7 +92,7 @@
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698611450-project-manager-jr1008842-'>Broadridge Project Manager (JR1008842) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698611450-project-manager-jr1008842-'>Broadridge Project Manager (JR1008842) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -186,7 +190,7 @@
 <p><span class="badge badge-light">New York  New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anaplan/jobs/4482084002?gh_src=659d87612'>Job Application for Senior Program Manager, Customer Operations at Anaplan</a></h5> 
+<h5><a href='https://boards.greenhouse.io/anaplan/jobs/4482084002?gh_src=659d87612'>Job Application for Senior Program Manager, Customer Operations at Anaplan</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -218,7 +222,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zalora.applytojob.com/apply/QMCmTSGfJm/Regional-Project-Manager'>Regional Project Manager - ZALORA SEA - Career Page</a></h5> 
+<h5><a href='http://zalora.applytojob.com/apply/QMCmTSGfJm/Regional-Project-Manager'>Regional Project Manager - ZALORA SEA - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -226,7 +230,7 @@
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Lely1/743999698589349-project-manager-product-development-maassluis-fulltime-'>Lely Project Manager Product Development (Maassluis, fulltime) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Lely1/743999698589349-project-manager-product-development-maassluis-fulltime-'>Lely Project Manager Product Development (Maassluis, fulltime) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -300,7 +304,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/icertis/0caaa3d5-e80d-4d4c-8778-ead9f1990b6b'>Icertis - Senior Program Manager - Professional Services</a></h5> 
+<h5><a href='https://jobs.lever.co/icertis/0caaa3d5-e80d-4d4c-8778-ead9f1990b6b'>Icertis - Senior Program Manager - Professional Services</a></h5> 
 <p><span class="badge badge-light">Bellevue, Washington</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -443,10 +447,6 @@
 <hr/>
 <h5><a href='https://4re.referrals.selectminds.com/jobs/project-manager-ii-27561'>Project Manager II - RELX Careers</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/xylem/job/oeGrbfwg'>Xylem Careers - Project Manager/Sr. Project Manager</a></h5> 
-<p><span class="badge badge-light">Charlotte North Carolina</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
